--- a/public/static/src/scss/setup/_variables.scss
+++ b/public/static/src/scss/setup/_variables.scss
@@ -24,6 +24,8 @@ $size-grid-unit: 16px;
 $size-grid-unit-small: 8px;
 $size-grid-unit-tiny: 4px;
 
+$size-header-height: 32px;
+
 // Fonts
 $font-body: sans-serif;
 $font-heading: sans-serif;
