--- a/src/AppBundle/Resources/views/partials/_icons.html.twig
+++ b/src/AppBundle/Resources/views/partials/_icons.html.twig
@@ -1,5 +1,13 @@
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
     <defs>
+        <symbol id="icon-close">
+            <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19
+            12 13.41 17.59 19 19 17.59 13.41 12z"></path>
+        </symbol>
+        <symbol id="icon-hexagon">
+            <path d="M47.63 2.5q4.332-2.5 8.662 0l43.3 25q4.33 2.5 4.33 7.5v50q0 5-4.33 7.5l-43.3 25q-4.33
+            2.5-8.66 0L4.33 92.5Q0 90 0 85V35q0-5 4.33-7.5z"></path>
+        </symbol>
         <symbol id="icon-settings">
             <path d="M19.43
             12.98c.04-.32.07-.64.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49
@@ -10,10 +18,6 @@
              .46-.18.49-.42l.38-2.65c.61-.25 1.17-.59 1.69-.98l2.49 1c.23.09.49 0
              .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5
               3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"></path>
-        </symbol>
-        <symbol id="icon-hexagon">
-            <path d="M47.63 2.5q4.332-2.5 8.662 0l43.3 25q4.33 2.5 4.33 7.5v50q0 5-4.33 7.5l-43.3 25q-4.33
-            2.5-8.66 0L4.33 92.5Q0 90 0 85V35q0-5 4.33-7.5z"></path>
         </symbol>
     </defs>
 </svg>
