Able to pick up abilities

--- a/public/static/src/scss/organisms/_map.scss
+++ b/public/static/src/scss/organisms/_map.scss
@@ -5,7 +5,7 @@
 }
 
 .map__board {
-    transform: perspective(500px) rotateX(40deg);
+    //transform: perspective(500px) rotateX(40deg);
 }
 
 .map__grid {
