--- a/public/static/src/scss/organisms/_organisms.scss
+++ b/public/static/src/scss/organisms/_organisms.scss
@@ -1,6 +1,8 @@
 @import "ability";
+@import "board";
 @import "header";
 @import "game";
+@import "loading-page";
 @import "map";
 @import "player";
 @import "travel-detail";
