--- a/public/static/src/scss/setup/_variables.scss
+++ b/public/static/src/scss/setup/_variables.scss
@@ -1,5 +1,5 @@
 // Colours
-$color-brand: #7f6333;
+$color-brand: #559;
 $color-brand-text: #FFF;
 
 $color-black: #131217;
@@ -25,6 +25,9 @@ $size-grid-unit-small: 8px;
 $size-grid-unit-tiny: 4px;
 
 $size-header-height: 32px;
+$size-tabs-height: 80px;
+
+$size-width-limit: 1280px;
 
 // Fonts
 $font-body: sans-serif;
