--- a/public/static/src/scss/setup/_variables.scss
+++ b/public/static/src/scss/setup/_variables.scss
@@ -31,4 +31,4 @@ $size-width-limit: 1280px;
 
 // Fonts
 $font-body: sans-serif;
-$font-heading: sans-serif;
+$font-heading: 'Baloo Bhai', sans-serif;
